Se ajusta la busqueda de productos recomendados